<resources>
    <string name="app_name">小微时贷</string>
    <string name="home">首页</string>
    <string name="project">项目</string>
    <string name="account">账户</string>
    <string name="news">资讯</string>
    <string name="turnover">交易量</string>
    <string name="benefit">用户收益</string>
    <string name="benefit_money">账户余额（元）</string>
    <string name="unbenefit_money">待收总额（元）</string>
    <string name="yuan">元</string>
    <string name="yi_yue">1月</string>
    <string name="immediate_investment">立即投资</string>
    <string name="invest_money">投资理财</string>
    <string name="prime_bid">原标</string>
    <string name="raw_interest">原利率</string>
    <string name="day">天</string>
    <string name="residue_day">剩余天数</string>
    <string name="transfer_price">转让本金</string>
    <string name="residue_interest">剩余本金</string>
    <string name="time">时间</string>
    <string name="type">种类</string>
    <string name="my_interest">待收利息（元）</string>
    <string name="account_info">账户信息</string>
    <string name="details">详情</string>
    <string name="auto_bid">自动投标</string>
    <string name="pay">充值</string>
    <string name="account_recharge">账户充值</string>
    <string name="withdraw">提现</string>
    <string name="new_bid_notice">新标预告</string>
    <string name="notice_message">公告讯息</string>
    <string name="feedback">问答反馈</string>
    <string name="theme">主题</string>
    <string name="time_1">时间</string>
    <string name="all_bid">全部的标</string>
    <string name="confirm">确定</string>
    <string name="questions">提问</string>
    <string name="payment_method">还款方式：</string>
    <string name="bid_details">项目介绍</string>
    <string name="project_details">项目详情</string>
    <string name="risk_control">风控材料</string>
    <string name="invest_record">投资记录</string>
    <string name="pay_pasworrd">支付密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="undertake">承接</string>
    <string name="user_data">个人资料</string>
    <string name="portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="reality_name">真实姓名</string>
    <string name="identity">身份证号</string>
    <string name="mobile">手机号码</string>
    <string name="address">省/市</string>
    <string name="sex">性别</string>
    <string name="marriage">婚姻状况</string>
    <string name="save">保存</string>
    <string name="photograph">拍照</string>
    <string name="photo">从相册选择</string>
    <string name="property_details">资产明细</string>
    <string name="invest_manage">投资管理</string>
    <string name="unite_deposit">资金托管</string>
    <string name="recharge_withdraw">充值提现记录</string>
    <string name="bank_card">银行卡</string>
    <string name="creditor_transfer">债权转让</string>
    <string name="security_account">账号安全</string>
    <string name="borrowing">借款</string>
    <string name="money_transfer">资金迁移</string>
    <string name="money_transfer_record">迁移记录</string>
    <string name="aboutus">关于小微</string>
    <string name="vip">VIP</string>
    <string name="recommend_award">推荐奖励</string>
    <string name="Fund_record">资金记录</string>
    <string name="my_ranking">我的排名</string>
    <string name="accredit_xw">授权小微</string>
    <string name="money_auto_transfer">自动迁移</string>
    <string name="ranking_front">排在我前面的资金：</string>
    <string name="account_balance">账户余额：</string>
    <string name="investment_amount">投资金额：</string>
    <string name="open_auto_bid">开启自动投标</string>
    <string name="all_type">全部的类型</string>
    <string name="retain_balance">保留余额：</string>
    <string name="save_settings">保存设置</string>
    <string name="returned_calendar">回款日历</string>
    <string name="selected_time">选中时间</string>
    <string name="returned_time">回款\n时间</string>
    <string name="due_project">待收项目</string>
    <string name="returned_project">回款项目</string>
    <string name="recharge_record">充值记录</string>
    <string name="withdraw_record">提现记录</string>
    <string name="certification">实名认证</string>
    <string name="bank_card_manage">银行卡管理</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="modification">修改</string>
    <string name="can_turn_creditor">可转让</string>
    <string name="transfering_creditor">转让中</string>
    <string name="transfer_record">转让记录</string>
    <string name="account_safety">账户安全</string>
    <string name="mobile_certification">手机认证</string>
    <string name="email_certification">邮箱认证</string>
    <string name="ll_modify_update_phone">修改手机号码</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="open_depository">开通存管</string>
    <string name="modify_pay_password">修改存管密码</string>
    <string name="gesture_password">设置手势密码</string>
    <string name="apply">立即申请</string>
    <string name="login">登录</string>
    <string name="hint_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="password_forget">忘记密码</string>
    <string name="hint_verify">请输入验证码</string>
    <string name="hint_referrer">请输入推荐会员名(选填)</string>
    <string name="hint_agreement">您已阅读并同意《小微时贷用户协议》</string>
    <string name="next">下一步</string>
    <string name="affirm_register">确认注册</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_password_affirm">请确认密码</string>
    <string name="hint_new_password">设置新密码</string>
    <string name="hint_new_password_affirm">确认新密码</string>
    <string name="gesture_lock_settings">手势设置</string>
    <string name="create_gesture_default">绘制解锁图案</string>
    <string name="create_gesture_correct">再次绘制解锁图案</string>
    <string name="create_gesture_less_error">至少连接4个点，请重新输入</string>
    <string name="create_gesture_confirm_error">与上一次绘制不一致，请重新绘制</string>
    <string name="create_gesture_confirm_correct">设置成功</string>
    <string name="gesture_forget_gesture">忘记手势</string>
    <string name="gesture_default">请输入手势密码</string>
    <string name="gesture_error">手势密码输入错误</string>
    <string name="gesture_correct">输入正确</string>
    <string name="queue_no_cast">排队不投</string>
    <string name="dredge_trusteeship">开通托管</string>
    <string name="cancel_trusteeship">取消托管</string>
    <string name="user_name_null">用户名不能为空</string>
    <string name="user_verify_null">验证码不能为空</string>
    <string name="user_phone_format_error">手机号格式错误</string>
    <string name="network_exception">网络异常，稍后重试。</string>
    <string name="send_succeed">发送成功，注意查收。</string>
    <string name="user_phone_null">手机号不能为空</string>
    <string name="user_password_null">密码不能为空</string>
    <string name="user_password_inconformity">两次密码不一致</string>
    <string name="user_password_error">密码长度需为6~16位</string>
    <string name="loading">loading...</string>
    <string name="click_exit">再按一次退出应用</string>
    <string name="load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="network_error_click_to_refresh">没有可用网络\r\n点击重试</string>
    <string name="no_data">暂无数据</string>
    <string name="please_write_full">请填写完整</string>
    <string name="once_max">单笔最大金额20000</string>
    <string name="please_check">请阅读并同意《江西银行账户存管第三方协议》</string>
    <string name="load_error">加载错误</string>
    <string name="no_more">没有更多数据</string>
    <string name="load_more">加载更多</string>
    <string name="refurbish_failure">刷新失败</string>
    <string name="name_null">姓名不能为空</string>
    <string name="identity_null">身份证不能为空</string>
    <string name="card_num_null">银行卡号不能为空</string>
    <string name="branch_name_null">支行名不能为空</string>
    <string name="card_num_length">银行卡格式不正确</string>
    <string name="banks_select">请选择银行</string>
    <string name="province_select">请选择省份</string>
    <string name="city_select">请选择城市</string>
    <string name="banks_null">请选择开户行</string>
    <string name="provinces_null">请选择省份</string>
    <string name="citys_null">请选择城市</string>
    <string name="setting_pay_password">设置存管密码</string>
    <string name="setting_custody_password">设置存管密码</string>
    <string name="setting_succeed">设置成功</string>
    <string name="quota_stroke">单笔限额</string>
    <string name="quota_day">单日限额</string>
    <string name="auth_xw">授权小微</string>
    <string name="settings_card">设置充值银行卡</string>
    <string name="pay_money_null">充值金额不能为空</string>
    <string name="withdraw_money_null">提现金额不能为空</string>
    <string name="bank_num_null">银联号不能为空</string>
    <string name="withdraw_bank_card_null">请选择提现账户</string>
    <string name="withdraw_money_exceed">提现金额不能大于余额</string>
    <string name="Transfer_money_exceed">迁移金额不能大于余额</string>
    <string name="pay_pasworrd_null">支付密码不能为空</string>
    <string name="withdraw_money_small">提现金额需大于0</string>
    <string name="money_no_one">实得金额不能小于1！</string>
    <string name="forget_login_password">找回登录密码</string>
    <string name="forget_pay_password">找回支付密码</string>
    <string name="inpt_retain_money">请输入保留金额</string>
    <string name="inpt_assign_money">请输入指定金额</string>
    <string name="inpt_scope_money_1">请输入开始金额</string>
    <string name="inpt_scope_money_2">请输入结束金额</string>
    <string name="user_user_agreement_no">请先同意用户协议</string>
    <string name="borrowing_money_null">请输入借款金额</string>
    <string name="borrowing_auth_null">请输入验证码</string>
    <string name="borrowing_auth_incorrect">验证码不正确</string>
    <string name="borrowing_money_error">请输入50的倍数</string>
    <string name="get_recommend_url">获取推荐链接</string>
    <string name="get_jiangli_url">获取推荐奖励</string>
    <string name="ceo_questions">CEO问答</string>
    <string name="reply">回复</string>
    <string name="news_details">资讯详情</string>
    <string name="reply_data_null">回复内容不能为空</string>
    <string name="question_data_null">请输入提问内容</string>
    <string name="theme_data_null">请选择主题</string>
    <string name="can_not_find_version_name">未知</string>
    <string name="expect">敬请期待！</string>
    <string name="address_null">请选择居住地址</string>
    <string name="promptly_apply">立即申请</string>
    <string name="services_null">请选择客服</string>
    <string name="auth_cancel">取消授权</string>
    <string name="update_success">更新成功！</string>
    <string name="switch_account">切换账号</string>
    <string name="network_error">网络连接错误</string>
    <string name="all_number">共计笔数</string>
    <string name="all_money">总共金额</string>
    <string name="remain">债权本金</string>
    <string name="crtrSM">服务　费</string>
    <string name="control">风控材料</string>
    <string name="investment">在投记录</string>
    <string name="notes">投资记录</string>
    <string name="particulars">项目详情</string>
    <string name="tip2.3">1、江西银行电子交易账户采用同卡进出设置，资金只能提现至您本人绑定的银行卡
\n\n2、实时提现：支持20万（含20万）以下资金提现，每日10次，每日限额50万，实时到账；工商银行、中国银行单笔5万。
\n\n3、大额提现：支持20万以上资金提现，工作日9:00-16:45 。到账时间为30分钟左右，依据发卡行不同可能略有差异。
\n\n4、客户每月均有3次免费提现机会，单月超出免费次数提现每笔收取2元；
\n\n5、如果提现出现任何问题，可立即联系小微时贷客服 400-186-9996。
</string>
    <string name="money_transfer_tip">1、  每人每日资金迁移上限为10万元，每人每日资金迁移操作次数上限为10次；
\n\n2、  单笔资金迁移上限为2万元；
\n\n3、  资金迁移申通提交成功后，该笔迁移的资金将会被冻结审核，审核过程中该笔资金无法进行投资、提现等相关操作；
\n\n4、  小微时贷将会在工作日9:00-16:00的早上及下午各进行一次资金迁移审核，审核通过后资金即可到账至您的江西银行存管账户中；（节假日进行资金迁移操作将会顺延至下一个工作日进行处理）；
\n\n5、  资金迁移无需任何手续费。
</string>
    <string name="money_auto_transfer_tip">1、开启自动资金迁移功能后，您旧系统账户上所有的账户余额（包括但不仅限于充值、项目回款等资金）将被冻结；
\n\n2、系统将在每个工作日的9：00~16：00自动为您迁移冻结资金到您新系统的账户中；
\n\n3、关闭该功能后所冻结的资金将继续执行迁移，后续增加资金将不再进行自动迁移；
\n\n4、若当天系统未执行资金迁移请耐心等待至下一个工作日。
</string>
    <string name="setcard">您尚未设置充值银行卡，是否前往设置。</string>
    <string name="go">前往</string>
    <string name="services">在线客服</string>
    <string name="booking">申请约标</string>
    <string name="unbind">解绑</string>
    <string name="sync">同步</string>
    <string name="against_red_packet">优惠券</string>
    <string name="comfirm_buttom">确认</string>
    <string name="cancel_buttom">取消</string>
    <string name="my_red_packet">我的卡券</string>
    <string name="modify_custody_password">修改存管密码</string>
    <string name="Quick_top_up">快捷充值</string>
    <string name="Alipay_recharge">支付宝充值</string>
    <string name="bank_transfer">银行转账</string>
    <string name="choose_bank">选择银行</string>
    <string name="get_bank_num">如何获取银联号</string>
</resources>