<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:edit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/DIMEN_100"
        android:layout_height="@dimen/DIMEN_100"
        android:layout_gravity="center"
        android:layout_margin="@dimen/DIMEN_20"
        android:src="@mipmap/ic_logo_1" />

    <com.gnwai.groupeeditview.GroupeEditView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        edit:hint="@string/hint_name"
        edit:imager="@mipmap/ic_name"></com.gnwai.groupeeditview.GroupeEditView>

    <com.gnwai.groupeeditview.GroupeEditView
        android:id="@+id/user_password_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        edit:editType="password"
        edit:hint="@string/hint_password"
        edit:imager="@mipmap/ic_password_1"></com.gnwai.groupeeditview.GroupeEditView>

    <Button
        android:id="@+id/commit"
        style="@style/SubmitButton"
        android:layout_marginLeft="@dimen/DIMEN_30"
        android:layout_marginRight="@dimen/DIMEN_30"
        android:layout_marginTop="@dimen/DIMEN_30"
        android:background="@drawable/select_submit_button_login"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/DIMEN_10">

            <ImageView
                android:layout_width="@dimen/DIMEN_20"
                android:layout_height="@dimen/DIMEN_20"
                android:src="@mipmap/ic_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/DIMEN_10"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/TEXT_M" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/DIMEN_10">

            <ImageView
                android:layout_width="@dimen/DIMEN_20"
                android:layout_height="@dimen/DIMEN_20"
                android:src="@mipmap/ic_find" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/DIMEN_10"
                android:text="@string/password_forget"
                android:textColor="@color/white"
                android:textSize="@dimen/TEXT_M" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>