<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_40"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_theme_screen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/theme_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/theme"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/TEXT_L" />

            <ImageView
                android:id="@+id/iv_theme_screen_arrows"
                android:layout_width="@dimen/DIMEN_10"
                android:layout_height="@dimen/DIMEN_10"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/DIMEN_10"
                android:src="@mipmap/ic_arrows_u_g" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/DIMEN_2"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/DIMEN_10"
            android:layout_marginTop="@dimen/DIMEN_10"
            android:background="@color/gray_bg"></View>

        <LinearLayout
            android:id="@+id/ll_time_screen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/time_1"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/TEXT_L" />

            <ImageView
                android:id="@+id/iv_time_screen_arrows"
                android:layout_width="@dimen/DIMEN_10"
                android:layout_height="@dimen/DIMEN_10"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/DIMEN_10"
                android:src="@mipmap/ic_arrows_u_g" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:scrollbars="none"
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="@dimen/DIMEN_10"
                android:padding="@dimen/DIMEN_10"></ListView>

        </android.support.v4.widget.SwipeRefreshLayout>

        <com.xwsd.app.view.EmptyLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"></com.xwsd.app.view.EmptyLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_50"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_gravity="center"
            android:id="@+id/ll_theme_screen_bottom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/DIMEN_5">

            <TextView
                android:id="@+id/theme_screen_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/theme"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/TEXT_L" />

            <ImageView
                android:id="@+id/iv_theme_screen_bottom_arrows"
                android:layout_width="@dimen/DIMEN_10"
                android:layout_height="@dimen/DIMEN_10"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/DIMEN_10"
                android:src="@mipmap/ic_arrows_u_g" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_sharp"
            android:hint="输入要反馈的问题"
            android:textColor="@color/gray_1"
            android:textSize="@dimen/TEXT_L" />

        <Button
            android:id="@+id/commit"
            android:layout_width="@dimen/DIMEN_60"
            android:layout_height="@dimen/DIMEN_35"
            android:layout_margin="@dimen/DIMEN_5"
            android:background="@drawable/select_submit_button"
            android:text="@string/questions"
            android:textColor="@color/white"
            android:textSize="@dimen/TEXT_L" />

    </LinearLayout>

</LinearLayout>